<resources>
    <string name="app_name">Dengage Sample</string>
    <string name="dengage_integration_key">Integration Key = %s</string>
    <string name="dengage_device_id">Device Id = %s</string>
    <string name="dengage_device_brand">Device Brand = %s</string>
    <string name="dengage_device_model">Device Model = %s</string>
    <string name="dengage_advertising_id">Advertising Id = %s</string>
    <string name="dengage_device_token">Device Token = %s</string>
    <string name="dengage_contact_key">Contact Key = %s</string>
    <string name="dengage_timezone">TimeZone = %s</string>
    <string name="dengage_language">Language = %s</string>
    <string name="dengage_user_permission">User Permission = %s</string>
    <string name="dengage_sdk_version">Sdk Version = %s</string>
    <string name="dengage_screen_width">Screen Width = %s</string>
    <string name="dengage_screen_height">Screen Height = %s</string>
    <string name="dengage_os_version">Os Version = %s</string>


    <string name="contact_key">Contact Key</string>
    <string name="country">Country</string>
    <string name="screen_name">Screen Name</string>
    <string name="category_path">Category Path</string>
    <string name="cart_item_count">Cart Item Count</string>
    <string name="cart_amount">Cart Amount</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="permission_label">Permission</string>

    <string name="button_save">Save</string>
    <string name="button_inbox_messages">Inbox Messages</string>
    <string name="button_device_info">Device Info</string>
    <string name="button_user_permission">Change User Permission</string>
    <string name="button_contact_key">Change Contact Key</string>
    <string name="button_country">Change Country</string>
    <string name="button_custom_events">Send Custom Event</string>
    <string name="button_in_app_message">In App Message</string>
    <string name="button_real_time_in_app_message">Real Time In App Message</string>
    <string name="button_tags">Set Tags</string>
    <string name="button_dengage_test_page">Dengage Test Page</string>
    <string name="table_name">Table Name</string>
    <string name="button_send">Send</string>
    <string name="event_key">Event Key</string>
    <string name="event_value">Event Value</string>
    <string name="custom_key">Custom Key</string>
    <string name="custom_value">Custom Value</string>
    <string name="button_mark_as_read">Read</string>
    <string name="button_delete">Delete</string>
    <string name="button_set_navigation">Set Navigation</string>
    <string name="button_show_real_time_in_app">Show Real Time In App</string>
    <string name="button_set">Set</string>
    <string name="tag">Tag</string>
    <string name="value">Value</string>
    <string name="change_time">Change Time</string>
    <string name="change_value">Change Value</string>
    <string name="remove_time">Remove Time</string>
    <string name="button_request_location_permission">Request Location Permission</string>
    <string name="button_start_geofencing">Start Geofencing</string>
    <string name="button_stop_geofencing">Stop Geofencing</string>
    <string name="button_last_silent_push_sync">Show Last Silent Push Sync</string>
    <string name="label_last_silent_push_sync_none">Last silent push sync: none yet</string>
    <string name="label_last_silent_push_sync">Last silent push sync: %1$s</string>
    <string name="button_monitored_geofences">Show Monitored Geofences</string>
    <string name="button_triggered_events">Show Triggered Events</string>
    <string name="label_monitored_geofences_none">No geofence is currently being monitored.</string>
    <string name="label_triggered_events_none">No geofence event has been triggered yet.</string>
    <string name="button_geofence">Geofence</string>
    <string name="clear_device_info">Clear Device Info</string>
    <string name="add_new_device_info">Add New Device Info</string>
    <string name="subscribe">Subscribe</string>

    <string name="read_status">Read: %1$s</string>
    <string name="receive_date_time">Receive Date &amp; Time: %1$s</string>
    <string name="inbox">Inbox</string>
    <string name="inbox_channel">Inbox Channel</string>
    <string name="button_inbox_channel">Inbox Channel</string>
    <string name="inbox_channel_empty">No inbox channel messages</string>
    <string name="inbox_channel_open">Open</string>
    <string name="inbox_channel_cta">CTA</string>
    <string name="inbox_channel_meta">Priority: %1$d | Pinned: %2$s | Read: %3$s</string>
    <string name="event_history">Event History</string>
    <string name="cart">Cart</string>
    <string name="app_story">App Story</string>
    <string name="app_story_size_test_hint">Testing size: this line should sit directly below the story container when hideIfNotFound hides the slot (wrong property id / no match). If you still see a big gap above this text, the story view did not release layout space.</string>
    <string name="real_time_inapp_filters">Real Time InApp Filters</string>
    <string name="live_update">Live Update</string>
    <string name="inapp_inline">InApp Inline</string>
    <string name="add_parameter">Add Parameter</string>
    <string name="set_cart">Set Cart</string>
    <string name="send_event">Send Event</string>
    <string name="table_name_display">Table: %s</string>
    <string name="x">X</string>
    <string name="product_id">Product ID</string>
    <string name="product_variant_id">Product Variant ID</string>
    <string name="price">Price</string>
    <string name="discounted_price">Discounted Price</string>
    <string name="quantity">Quantity</string>
    <string name="has_discount">Has Discount</string>
    <string name="has_promotion">Has Promotion</string>
    <string name="effective_price_display">Effective Price: %s</string>
    <string name="line_total_display">Line Total: %s</string>
    <string name="discounted_line_total_display">Discounted Line Total: %s</string>
    <string name="effective_line_total_display">Effective Line Total: %s</string>
    <string name="remove_item">Remove Item</string>
    <string name="add_item">Add Item</string>
    <string name="update_cart">Update Cart</string>

</resources>