<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/dengage_page_margin_medium"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etTag"
            android:layout_width="match_parent"
            android:layout_height="@dimen/base_component_height"
            android:hint="@string/tag"
            android:textSize="@dimen/dengage_text_size_medium" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etValue"
            android:layout_width="match_parent"
            android:layout_height="@dimen/base_component_height"
            android:hint="@string/value"
            android:textSize="@dimen/dengage_text_size_medium" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etChangeTime"
            android:layout_width="match_parent"
            android:layout_height="@dimen/base_component_height"
            android:focusable="false"
            android:hint="@string/change_time"
            android:textSize="@dimen/dengage_text_size_medium" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etChangeValue"
            android:layout_width="match_parent"
            android:layout_height="@dimen/base_component_height"
            android:hint="@string/change_value"
            android:textSize="@dimen/dengage_text_size_medium" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etRemoveTime"
            android:layout_width="match_parent"
            android:layout_height="@dimen/base_component_height"
            android:focusable="false"
            android:hint="@string/remove_time"
            android:textSize="@dimen/dengage_text_size_medium" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSend"
            android:layout_width="match_parent"
            android:layout_height="@dimen/base_component_height"
            android:layout_marginTop="12dp"
            android:text="@string/button_send" />

    </LinearLayout>

</layout>