<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/dengage_page_margin_medium"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etContactKey"
            android:layout_width="match_parent"
            android:layout_height="@dimen/base_component_height"
            android:hint="@string/contact_key"
            android:textSize="@dimen/dengage_text_size_medium" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="@dimen/base_component_height"
            android:layout_marginTop="12dp"
            android:text="@string/button_save" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvPermissionLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/permission_label"
                android:textSize="@dimen/dengage_text_size_medium" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switchPermission"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

</layout>