<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <LinearLayout
        android:id="@+id/ll_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@+id/ll_action_buttons"
        android:layout_marginEnd="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:textColor="@color/dengage_color_black"
            android:textSize="@dimen/small_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:textColor="@color/dengage_color_black"
            android:textSize="@dimen/small_text_size" />

        <TextView
            android:id="@+id/tv_meta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:textColor="@color/dengage_color_black"
            android:textSize="@dimen/small_text_size" />

        <TextView
            android:id="@+id/tv_receive_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:textColor="@color/dengage_color_black"
            android:textSize="@dimen/small_text_size" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_action_buttons"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="10dp"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_open"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inbox_channel_open" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_cta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inbox_channel_cta" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_delete" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentBottom="true"
        android:background="#E0E0E0" />

</RelativeLayout>
